--- a/src/assets/styles/reset.less
+++ b/src/assets/styles/reset.less
@@ -7,7 +7,7 @@
     -webkit-text-size-adjust: none;
     font-family             : "Helvetica Neue", Helvetica, STHeiTi, sans-serif;
     -webkit-font-smoothing  : antialiased;
-    box-sizing              : border-box;
+    // box-sizing              : border-box;
     font-weight             : normal;
     /* 解决passive 问题 */
     touch-action: pan-x pan-y;
