--- a/src/components/CardContainer.less
+++ b/src/components/CardContainer.less
@@ -1,7 +1,8 @@
-.org-card-container{
-    width:100%;
-    // height:296px;
-    background:rgba(255,255,255,1);
-    box-shadow:0px 8px 24px 0px rgba(0,0,0,0.1);
-    border-radius:16px;
+.org-card-container {
+    // width        : 100%;
+    // height    :296px;
+    background   : rgba(255, 255, 255, 1);
+    box-shadow   : 0px 8px 24px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    margin       : auto 34px;
 }
