feat:添加组件 tabbar,switchtab,selectortab

--- a/src/components/CardMenu.less
+++ b/src/components/CardMenu.less
@@ -1,6 +1,6 @@
 .org-cardMenu {
     &-container {
-        margin: 20px 32px 0 32px;
+        margin    : 20px 32px 0 32px;
         box-shadow: 0px 8px 24px 0px rgba(0, 0, 0, 0.1);
 
         .am-card::before {
@@ -9,21 +9,29 @@
     }
 
     &-title {
-        font-size: 30px;
+        font-size  : 30px;
         font-weight: 500;
-        color: #0D0E10;
+        color      : #0D0E10;
     }
+
     &-body {
         padding-bottom: 32px;
     }
+
     &-item {
-        width: 190px;
-        height: 80px;
+        width        : 190px;
+        height       : 80px;
         border-radius: 8px;
-        text-align: center;
-        line-height: 80px;
-        display: inline-block;
-        margin: 20px 0 0 14px;
-        border: 2px dashed rgba(151, 151, 151, 1);
+        text-align   : center;
+        line-height  : 80px;
+        display      : inline-block;
+        margin       : 20px 0 0 14px;
+        border       : 2px dashed rgba(151, 151, 151, 1);
+    }
+
+    &-img {
+        width : 48px;
+        height: 48px;
+        margin: 0 26px;
     }
 }
