--- a/src/pages/ranking/IndexRank.less
+++ b/src/pages/ranking/IndexRank.less
@@ -1,19 +1,26 @@
-@import url('../assets/styles/mixin.less');
+@import url('../../assets/styles/mixin.less');
 
 .indexRank-background {
     background: #fff;
+    min-height: 1236px;
 }
-.indexRank-border{
+
+.indexRank-border {
     background: #F5F5F5;
     height: 2px;
-    
 }
 
 .indexRank-switch-container {
     margin-top: 32px;
+    height: 100%;
     .flex(@dir: row, @justify: space-around);
 
     &>div {
         flex: 1;
     }
+}
+
+.indexRank-content-charts{
+    width: 100%;
+    height: 1000px;
 }
