--- a/src/components/TabBar.less
+++ b/src/components/TabBar.less
@@ -13,6 +13,7 @@
         line-height: 44px;
         font-size: 30px;
         color: #858E9F;
+        transition: all .2s;
     }
 
     &-actived {
