--- a/src/components/SelectorTab.less
+++ b/src/components/SelectorTab.less
@@ -18,6 +18,7 @@
             &:first-child{
                 flex: 1.25;
             }
+            .ellipsis();
         }
 
     }
@@ -26,20 +27,39 @@
         text-align : center;
         font-weight: 500;
     }
+
+    &-rotate{
+        vertical-align: text-top;
+        transition: transform .5s;
+    }
+
+    &-icon{
+        transform: rotate(-180deg);
+    }
+
     &-mengban{
         width: 100%;
         height: 100%;
         position: absolute; 
         background: #000;
+        opacity: 0;
+        z-index: 9;
+        visibility: hidden;
+        transition: all .5s;
+    }
+    &-mbactived{
         opacity: 0.3;
+        visibility: visible;
     }
     &-selector {
-        // display: none;
         font-size : 28px;
         width     : 100%;
         background: #000;
-        // opacity: 0.3;
         position  : absolute;
+        z-index: 9;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height .5s;
         
 
         &>li {
@@ -48,9 +68,15 @@
             background: #fff;
             border-top: 2px solid #EEEEEE;
             padding:0 42px;
+            vertical-align: text-top;
             .flex(@justify:space-between);
         }
     }
-
-
+    &-actived{
+        overflow: auto;
+        max-height: 500px;
+    }
+}
+.base-color{
+    color:@base-color;
 }
