fix: fix eslint error

--- a/src/assets/styles/mixin.less
+++ b/src/assets/styles/mixin.less
@@ -51,8 +51,8 @@
 
 .multi-ellipsis{
     content: "...";
-    background: -webkit-linear-gradient(left,transparent,#fff 55%);
-    background: -o-linear-gradient(right,transparent,#fff 55%);
-    background: -moz-linear-gradient(right,transparent,#fff 55%);
-    background: linear-gradient(right,transparent,#fff 55%);
+    background: -webkit-linear-gradient(to left,transparent,#fff 55%);
+    background: -o-linear-gradient(to right,transparent,#fff 55%);
+    background: -moz-linear-gradient(to right,transparent,#fff 55%);
+    background: linear-gradient(to right,transparent,#fff 55%);
 }
