--- a/src/components/BaseTable.less
+++ b/src/components/BaseTable.less
@@ -8,26 +8,38 @@
 
     &-wrapper {
         .flex(@dir: column);
+        overflow: auto;
 
         &>li {
             min-width: 100%;
             height: 80px;
             flex: 1;
             .flex(@dir: row);
+            // align-content:flex-start;
             text-align: center;
-            color:#0F1D37;
+            color: #0F1D37;
 
-            &>div {
+            &>span {
+                box-sizing: border-box;
+                position: relative;
                 flex: 1;
                 height: 100%;
                 line-height: 80px;
                 font-size: 26px;
+                padding-right:30px;
+                .ellipsis();
             }
         }
     }
-    &-title{
+    &-icon{
+        position: absolute;
+        right: 10px;
+        top:30%;
+    }
+
+    &-title {
         background: #F5F5F5;
-        color:#858E9F!important;
+        color: #858E9F !important;
     }
 
 }
