--- a/src/components/SelectorTab.less
+++ b/src/components/SelectorTab.less
@@ -39,7 +39,7 @@
 
     &-mengban{
         width: 100%;
-        height: 100%;
+        height: calc(100% - 190px);
         position: absolute; 
         background: #000;
         opacity: 0;
